# M8

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Assembler/: parser.y
VM/: M8_interpreter.c  M8_interpreter.h  interpreter.c  interpreter.h  test.txt
src/: M8_helper.c  M8_helper.h  M8_instructions.h  M8_vm.c  M8_vm.h  main.c
src/asm/: lexer.l  parser.y
src/vm/: M8_helper.c  M8_instructions.h  M8_vm.c  M8_vm.h
